notes:2095.delete-the-middle-node-of-a-linked-list

--- a/notes/questions/25.reverse-nodes-in-k-group.md
+++ b/notes/questions/25.reverse-nodes-in-k-group.md
@@ -21,7 +21,7 @@ while p:
 
 拿到断开后的每组节点的头结点之后，将每组节点进行内部翻转，并将翻转之后的子链表进行连接
 
-首先将每个子链表进行翻转
+首先将每个子链表进行翻转。最后一个子链表如果长度小于k的话，则不翻转
 ```python
 for i in range(len(heads)):
     heads[i] = self.reverseLinkedList(heads[i])
@@ -38,6 +38,16 @@ def reverseLinkedList(self, head):
         last = cur
         cur  nxt
     return last
+```
+
+最后需要链接每个子链表
+```python
+for i in range(len(heads) - 1):
+    h = heads[i]
+    while h.next:
+        h = h.next
+    h.next = heads[i+1]
+
 ```
 
  - 翻转链表其实需要三个辅助节点 last cur nxt
