notes:lintcode.391.number-of-airplanes

--- a/notes/lintcode/391.md
+++ b/notes/lintcode/391.md
@@ -1,4 +1,4 @@
-# 391. 数飞机
+# 391. 数飞机 / 会议室II
 
 扫描线框架题
 
@@ -19,3 +19,19 @@ for t, flag in timeline:
     cnt += flag
     res = max(res, cnt)
 ```
+
+# 会议室II 解法2
+开两个列表starts和ends分别保存各个会议的开始时间和结束时间，然后按时间排序
+```python
+starts = []
+ends = []
+for i in range(len(intervals)):
+    starts.append(intervals[i][0])
+    ends.append(intervals[i][1])
+starts = sorted(starts)
+ends = sorted(ends)
+```
+ - 如果第一个会还没开完，但一直有新的会开始，那么room++
+ - 如果第一个会开完，就看下一个会什么时候开完
+
+
