--- a/notes/leetcode/56.merge-intervals.md
+++ b/notes/leetcode/56.merge-intervals.md
@@ -1,6 +1,21 @@
 # 56.merge-intervals
 
+## 解法1 经典扫描线
+```
+0 1 2 3 4 5 6 7 8 9 10 11
+X X X X X X X X X X X  X
++ + +
+    + + + + +
+                + + +
 
+当两个数字相同的时候，应该将1的放到前面，避免和为0，无法合并
+diff.sort(key=lambda x: (x[0], -x[1]))
+[(1, 1), (4, -1), (4, 1), (5, -1)]
+[(1, 1), (4, 1), (4, -1), (5, -1)]
+```
+
+
+## 解法2
 首先对区间按照开始时间排序
 ```python
 intervals.sort(key=lambda x: x[0])
